[gd_scene load_steps=3 format=2]

[ext_resource path="res://LoadingMatch.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=2]

[node name="LoadingMatch" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingLabel" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 244.0
margin_right = 1024.0
margin_bottom = 275.0
text = "Loading..."
align = 1

[node name="LoadingNotification" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 1024.0
margin_bottom = 356.0
align = 1

[node name="Tween" type="Tween" parent="."]

[node name="QuipTimer" type="Timer" parent="."]
wait_time = 0.9
autostart = true

[connection signal="timeout" from="QuipTimer" to="." method="_on_QuipTimer_timeout"]
